--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 .scatter {
 	display: block;
 	float:left;
-	margin: 0.2em 0.2em 0.4em 1em ; 
+	margin: 0.2em 0.2em 0.4em 1em; 
 	width: 20em;
 	height: 20em;
 	border-left: 0.1em solid #D3D3D3;
@@ -10,4 +10,12 @@
 }
 .scatter:nth-child(2n+1) {
     clear: left;
+}
+.tooltip-scp {
+	width: 3em;
+	height: 3em;
+	background-color: #D3D3D3;
+    text-align: center;
+    font: 12px sans-serif;
+    position: absolute;
 }
